data transformation added

--- a/research/01_data_ingestion.ipynb
+++ b/research/01_data_ingestion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "6bf21066",
    "metadata": {},
    "outputs": [],
@@ -12,21 +12,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "d325e8e3",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'c:\\\\Users\\\\Priya\\\\NLP\\\\Text-Summarizer-Project\\\\research'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#command that shows the current working directory\n",
     "%pwd"
@@ -34,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "bd4c2452",
    "metadata": {},
    "outputs": [],
@@ -46,28 +35,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "4a65b955",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'c:\\\\Users\\\\Priya\\\\NLP\\\\Text-Summarizer-Project'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%pwd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "e5275d78",
    "metadata": {},
    "outputs": [],
@@ -89,27 +67,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "512921e6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: ensure in c:\\users\\priya\\python\\envs\\texts\\lib\\site-packages (1.0.4)\n",
-      "Requirement already satisfied: six>=1.11.0 in c:\\users\\priya\\python\\envs\\texts\\lib\\site-packages (from ensure) (1.17.0)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "pip install --upgrade ensure"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "71bdfe25",
    "metadata": {},
    "outputs": [],
@@ -120,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "8bd414e7",
    "metadata": {},
    "outputs": [],
@@ -131,15 +99,16 @@
     "        #Reads the contents of config.yaml using a helper function read_yaml() and stores it as a Python dictionary\n",
     "        self.config = read_yaml(config_filepath)\n",
     "        self.params = read_yaml(params_filepath)\n",
-    "\n",
+    "        # Creates 'artifacts/'\n",
+    "        # Note:And artifacts/ already exists, then: The function simply skips creating it again, because os.makedirs(path, exist_ok=True) is typically used under the hood, No error is raised — it’s safe and idempotent\n",
     "        create_directories([self.config.artifacts_root])\n",
-    "\n",
+    "    \n",
     "    #This method is designed to construct and return a DataIngestionConfig object — that is, an object holding the config values specific to data ingestion.\n",
     "    #The return type is declared as DataIngestionConfig\n",
     "    def get_data_ingestion_config(self) -> DataIngestionConfig:\n",
     "        #Grabs the data_ingestion section from config.yaml\n",
     "        config = self.config.data_ingestion\n",
-    "        #creates the data_ingestion folder inside the artifacts/ directory\n",
+    "        #creates the data_ingestion folder inside the artifacts/ directory, Creates 'artifacts/data_ingestion/\n",
     "        create_directories([config.root_dir])\n",
     "        #Create an instance of the DataIngestionConfig class and Populate it with values from the YAML file (via config).\n",
     "        data_ingestion_config = DataIngestionConfig(\n",
@@ -155,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "bb2bf76f",
    "metadata": {},
    "outputs": [],
@@ -169,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "c2326073",
    "metadata": {},
    "outputs": [],
@@ -209,18 +178,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "e587574b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Current Working Directory: c:\\Users\\Priya\\NLP\\Text-Summarizer-Project\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "print(\"Current Working Directory:\", os.getcwd())"
@@ -228,22 +189,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "d5fb85ac",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[2025-06-15 18:11:47,545: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2025-06-15 18:11:47,548: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2025-06-15 18:11:47,549: INFO: common: Created directory at: artifacts]\n",
-      "[2025-06-15 18:11:47,550: INFO: common: Created directory at: artifacts/data_ingestion]\n",
-      "[2025-06-15 18:11:47,551: INFO: 2860665785: File already exists of size: ~ 7718 KB]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "try:\n",
     "    #creates an object of the ConfigurationManager class\n",
