--- a/research/trails.ipynb
+++ b/research/trails.ipynb
@@ -1,11 +1,46 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "0b283cd7",
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "9d2ee94f",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.12.9\n",
+      "3.12.9 | packaged by Anaconda, Inc. | (main, Feb  6 2025, 18:49:16) [MSC v.1929 64 bit (AMD64)]\n",
+      "('64bit', 'WindowsPE')\n"
+     ]
+    }
+   ],
    "source": [
-    "Select the environment: textS using Select Kernel"
+    "import platform\n",
+    "import sys\n",
+    "print(platform.python_version())\n",
+    "print(sys.version)\n",
+    "print(platform.architecture())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "04d85828",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.2.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sentencepiece\n",
+    "print(sentencepiece.__version__)"
    ]
   },
   {
@@ -22,7 +57,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.9"
   }
  },
