--- a/research/04_model_trainer.ipynb
+++ b/research/04_model_trainer.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "12ab43ba",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "b7b405ce",
    "metadata": {},
    "outputs": [
@@ -53,7 +53,7 @@
        "'c:\\\\Users\\\\Priya\\\\NLP\\\\Text-Summarizer-Project'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,11 +61,226 @@
    "source": [
     "%pwd"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "755b4221",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dataclasses import dataclass\n",
+    "from pathlib import Path\n",
+    "\n",
+    "@dataclass(frozen=True)\n",
+    "class ModelTrainerConfig:\n",
+    "    root_dir: Path\n",
+    "    data_path: Path\n",
+    "    model_ckpt: Path\n",
+    "    num_train_epochs: int\n",
+    "    warmup_steps: int\n",
+    "    per_device_train_batch_size: int\n",
+    "    weight_decay: float\n",
+    "    logging_steps: int\n",
+    "    eval_strategy: str\n",
+    "    eval_steps: str\n",
+    "    save_strategy: str\n",
+    "    gradient_accumulation_steps: int"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "4faf97a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from textSummarizer.constants import *\n",
+    "from textSummarizer.utils.common import read_yaml, create_directories"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "7738676a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ConfigurationManager:\n",
+    "    def __init__(self, config_filepath = CONFIG_FILE_PATH, params_filepath = PARAMS_FILE_PATH):\n",
+    "        self.config = read_yaml(config_filepath)\n",
+    "        self.params = read_yaml(params_filepath)\n",
+    "        create_directories([self.config.artifacts_root])\n",
+    "    def get_model_trainer_config(self) -> ModelTrainerConfig:\n",
+    "        config = self.config.model_trainer\n",
+    "        params = self.params.TrainingArguments\n",
+    "\n",
+    "        create_directories([config.root_dir])\n",
+    "\n",
+    "        model_trainer_config = ModelTrainerConfig(\n",
+    "            root_dir = config.root_dir,\n",
+    "            data_path = config.data_path,\n",
+    "            model_ckpt = config.model_ckpt,\n",
+    "            num_train_epochs = params.num_train_epochs,\n",
+    "            warmup_steps = params.warmup_steps,\n",
+    "            per_device_train_batch_size = params.per_device_train_batch_size,\n",
+    "            weight_decay = params.weight_decay,\n",
+    "            logging_steps = params.logging_steps,\n",
+    "            eval_strategy = params.eval_strategy,\n",
+    "            eval_steps = params.eval_steps,\n",
+    "            save_strategy = params.save_strategy,\n",
+    "            gradient_accumulation_steps = params.gradient_accumulation_steps\n",
+    "        )\n",
+    "\n",
+    "        return model_trainer_config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "5bdb7c43",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Priya\\Python\\envs\\textS\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2025-06-22 14:50:19,577: INFO: config: PyTorch version 2.7.0 available.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from transformers import TrainingArguments, Trainer\n",
+    "from transformers import DataCollatorForSeq2Seq\n",
+    "from transformers import AutoModelForSeq2SeqLM, AutoTokenizer\n",
+    "import torch\n",
+    "from datasets import load_dataset, load_from_disk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "de9f0741",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ModelTrainer:\n",
+    "    def __init__(self, config: ModelTrainerConfig):\n",
+    "        self.config = config\n",
+    "\n",
+    "    def train(self):\n",
+    "        device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+    "        tokenizer = AutoTokenizer.from_pretrained(self.config.model_ckpt)\n",
+    "        model_pegasus = AutoModelForSeq2SeqLM.from_pretrained(self.config.model_ckpt).to(device)\n",
+    "        seq2seq_data_collator = DataCollatorForSeq2Seq(tokenizer, model=model_pegasus)\n",
+    "\n",
+    "        #Loading Data\n",
+    "        dataset_samsum_pt = load_from_disk(self.config.data_path)\n",
+    "        train_subset = dataset_samsum_pt[\"train\"].select(range(5))\n",
+    "        eval_subset = dataset_samsum_pt[\"validation\"].select(range(5))\n",
+    "\n",
+    "        trainer_args = TrainingArguments(output_dir=self.config.root_dir,\n",
+    "                                         num_train_epochs = self.config.num_train_epochs,\n",
+    "                                         warmup_steps = self.config.warmup_steps,\n",
+    "                                         per_device_train_batch_size = self.config.per_device_train_batch_size,\n",
+    "                                         weight_decay = self.config.weight_decay,\n",
+    "                                         logging_steps = self.config.logging_steps,\n",
+    "                                         eval_strategy = self.config.eval_strategy,\n",
+    "                                         eval_steps = self.config.eval_steps,\n",
+    "                                         save_strategy = self.config.save_strategy,\n",
+    "                                         gradient_accumulation_steps = self.config.gradient_accumulation_steps)\n",
+    "        \n",
+    "        trainer = Trainer(model=model_pegasus, args=trainer_args,\n",
+    "                  tokenizer=tokenizer, data_collator=seq2seq_data_collator,\n",
+    "                  train_dataset=train_subset,\n",
+    "                  eval_dataset=eval_subset)\n",
+    "        \n",
+    "        trainer.train()\n",
+    "        #Save Model\n",
+    "        model_pegasus.save_pretrained(os.path.join(self.config.root_dir, \"pegasus-samsum-model\"))\n",
+    "        #Save Tokenizer\n",
+    "        tokenizer.save_pretrained(os.path.join(self.config.root_dir, \"tokenizer\"))\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37024fd3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2025-06-22 14:50:21,610: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2025-06-22 14:50:21,610: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2025-06-22 14:50:21,610: INFO: common: Created directory at: artifacts]\n",
+      "[2025-06-22 14:50:21,610: INFO: common: Created directory at: artifacts/model_trainer]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of PegasusForConditionalGeneration were not initialized from the model checkpoint at google/pegasus-cnn_dailymail and are newly initialized: ['model.decoder.embed_positions.weight', 'model.encoder.embed_positions.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n",
+      "C:\\Users\\Priya\\AppData\\Local\\Temp\\ipykernel_8068\\2689070469.py:27: FutureWarning: `tokenizer` is deprecated and will be removed in version 5.0.0 for `Trainer.__init__`. Use `processing_class` instead.\n",
+      "  trainer = Trainer(model=model_pegasus, args=trainer_args,\n",
+      "c:\\Users\\Priya\\Python\\envs\\textS\\Lib\\site-packages\\torch\\utils\\data\\dataloader.py:665: UserWarning: 'pin_memory' argument is set as true but no accelerator is found, then device pinned memory won't be used.\n",
+      "  warnings.warn(warn_msg)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "    <div>\n",
+       "      \n",
+       "      <progress value='5' max='5' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
+       "      [5/5 06:37, Epoch 0.80/1]\n",
+       "    </div>\n",
+       "    <table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       " <tr style=\"text-align: left;\">\n",
+       "      <th>Step</th>\n",
+       "      <th>Training Loss</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table><p>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    config = ConfigurationManager()\n",
+    "    model_trainer_config = config.get_model_trainer_config()\n",
+    "    model_trainer = ModelTrainer(config=model_trainer_config)\n",
+    "    model_trainer.train()\n",
+    "except Exception as e:\n",
+    "    raise e"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "textS",
    "language": "python",
    "name": "python3"
   },
