--- a/research/03_data_transformation.ipynb
+++ b/research/03_data_transformation.ipynb
@@ -229,7 +229,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "textS",
    "language": "python",
    "name": "python3"
   },
