--- a/research/05_model_evaluation.ipynb
+++ b/research/05_model_evaluation.ipynb
@@ -61,6 +61,196 @@
    "source": [
     "%pwd"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "e9f53eec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dataclasses import dataclass\n",
+    "from pathlib import Path\n",
+    "\n",
+    "@dataclass(frozen=True)\n",
+    "class ModelEvaluationConfig:\n",
+    "    root_dir: Path\n",
+    "    data_path: Path\n",
+    "    model_path: Path\n",
+    "    tokenizer_path: Path\n",
+    "    metric_file_name: Path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "6b3704db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from textSummarizer.constants import *\n",
+    "from textSummarizer.utils.common import read_yaml, create_directories"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "6cbd0650",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ConfigurationManager:\n",
+    "    def __init__(self, config_filepath = CONFIG_FILE_PATH, params_filepath = PARAMS_FILE_PATH):\n",
+    "        self.config = read_yaml(config_filepath)\n",
+    "        self.params = read_yaml(params_filepath)\n",
+    "        create_directories([self.config.artifacts_root])\n",
+    "\n",
+    "    def get_model_evaluation_config(self) -> ModelEvaluationConfig:\n",
+    "        config = self.config.model_evaluation\n",
+    "\n",
+    "        create_directories([config.root_dir])\n",
+    "\n",
+    "        model_evaluation_config = ModelEvaluationConfig(\n",
+    "            root_dir = config.root_dir,\n",
+    "            data_path = config.data_path,\n",
+    "            model_path = config.model_path,\n",
+    "            tokenizer_path = config.tokenizer_path,\n",
+    "            metric_file_name = config.metric_file_name\n",
+    "        )\n",
+    "\n",
+    "        return model_evaluation_config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "6bddea64",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\Priya\\Python\\envs\\textS\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2025-06-28 16:57:13,332: INFO: config: PyTorch version 2.7.0 available.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from transformers import AutoModelForSeq2SeqLM, AutoTokenizer\n",
+    "from datasets import load_dataset, load_from_disk\n",
+    "import evaluate\n",
+    "import torch\n",
+    "import pandas as pd\n",
+    "from tqdm import tqdm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "48624a01",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ModelEvaluation:\n",
+    "    def __init__(self, config: ModelEvaluationConfig):\n",
+    "        self.config = config\n",
+    "    \n",
+    "    def generate_batch_sized_chunks(self, list_of_elements, batch_size):\n",
+    "        for i in range(0, len(list_of_elements), batch_size):\n",
+    "            yield list_of_elements[i : i + batch_size]\n",
+    "\n",
+    "    def calculate_metric_on_test_ds(self, dataset, metric, model, tokenizer, batch_size=16,\n",
+    "                                device=\"cuda\" if torch.cuda.is_available() else \"cpu\",\n",
+    "                                column_text='article',\n",
+    "                                column_summary=\"highlights\"):\n",
+    "        article_batches = list(self.generate_batch_sized_chunks(dataset[column_text], batch_size))\n",
+    "        target_batches = list(self.generate_batch_sized_chunks(dataset[column_summary], batch_size))\n",
+    "\n",
+    "        for article_batch, target_batch in tqdm(\n",
+    "            zip(article_batches, target_batches), total=len(article_batches)):\n",
+    "            inputs = tokenizer(article_batch, max_length=1024, truncation=True,\n",
+    "                         padding=\"max_length\", return_tensors=\"pt\")\n",
+    "            summaries = model.generate(input_ids=inputs[\"input_ids\"].to(device),\n",
+    "                                 attention_mask=inputs[\"attention_mask\"].to(device),\n",
+    "                                 length_penalty=0.8, num_beams=8, max_length=128)\n",
+    "            decoded_summaries = [tokenizer.decode(s, skip_special_tokens=True,\n",
+    "                                            clean_up_tokenization_spaces=True) for s in summaries]\n",
+    "            decoded_summaries = [d.replace(\"\", \" \") for d in decoded_summaries]\n",
+    "\n",
+    "            metric.add_batch(predictions=decoded_summaries, references=target_batch)\n",
+    "        score = metric.compute()\n",
+    "        return score\n",
+    "\n",
+    "    def evaluate(self):\n",
+    "        device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+    "        tokenizer = AutoTokenizer.from_pretrained(self.config.tokenizer_path)\n",
+    "        model_pegasus = AutoModelForSeq2SeqLM.from_pretrained(self.config.model_path).to(device)\n",
+    "\n",
+    "        #loadind data\n",
+    "        dataset_samsum_pt = load_from_disk(self.config.data_path)\n",
+    "\n",
+    "        rouge_names = [\"rouge1\", \"rouge2\", \"rougeL\", \"rougeLsum\"]\n",
+    "        rouge_metric = evaluate.load('rouge')\n",
+    "\n",
+    "        score = self.calculate_metric_on_test_ds(\n",
+    "            dataset_samsum_pt['test'][0:5], rouge_metric, model_pegasus, tokenizer,\n",
+    "            batch_size=2, column_text='dialogue', column_summary='summary')\n",
+    "\n",
+    "        rouge_dict = dict((rn, score[rn]) for rn in rouge_names)\n",
+    "\n",
+    "        df = pd.DataFrame(rouge_dict, index=['pegasus'])\n",
+    "        df.to_csv(self.config.metric_file_name, index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "31a1d8c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2025-06-28 16:57:19,747: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2025-06-28 16:57:19,754: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2025-06-28 16:57:19,754: INFO: common: Created directory at: artifacts]\n",
+      "[2025-06-28 16:57:19,754: INFO: common: Created directory at: artifacts/model_evaluation]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/3 [00:00<?, ?it/s]Passing a tuple of `past_key_values` is deprecated and will be removed in Transformers v4.58.0. You should pass an instance of `EncoderDecoderCache` instead, e.g. `past_key_values=EncoderDecoderCache.from_legacy_cache(past_key_values)`.\n",
+      "100%|██████████| 3/3 [07:23<00:00, 147.89s/it]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2025-06-28 17:04:46,705: INFO: rouge_scorer: Using default tokenizer.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    config = ConfigurationManager()\n",
+    "    model_evaluation_config = config.get_model_evaluation_config()\n",
+    "    model_evaluation = ModelEvaluation(config=model_evaluation_config)\n",
+    "    model_evaluation.evaluate()\n",
+    "except Exception as e:\n",
+    "    raise e"
+   ]
   }
  ],
  "metadata": {
